# Search-In-Artificial-Intelligence-Course-s-Project

./: CMakeLists.txt  README.md
executables/: run-experiments.cpp  run-experiments.sh  run-single-scenario.cpp  run-single-scenario.sh
outputs/: maze-32-32-2.dataframe  room-64-64-8.dataframe
room-64-64-8/: room-64-64-8.map
room-64-64-8/scen-random/: room-64-64-8-random-11.scen
src/: A*.cpp  A*.h  Agent.cpp  Agent.h  Constants.h  Coordinate.cpp  Coordinate.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  IBDA*.cpp  IBDA*.h  IBDA*2.cpp  IBDA*2.h  IDA*.cpp  IDA*.h  ISingleAgentPathPlanner.cpp  ISingleAgentPathPlanner.h  Map.cpp  Map.h  Plan.h  Printer.h  Scenario.cpp  Scenario.h  Terrain.h  Timer.cpp  Timer.h  Types.h  Utils.cpp  Utils.h  Vertex.cpp  Vertex.h
